--- a/templates/weather/index.html
+++ b/templates/weather/index.html
@@ -92,8 +92,8 @@
     <header>
         <nav>
             <a href="/">Прогноз погоды</a>
-            <a href="#">Статистика</a>
-            <a href="#">Загрузить свои данные</a>
+            <a href="/statistics/">Статистика</a>
+            <a href="/upload/">Загрузить свои данные</a>
             <a href="#">Профиль</a>
         </nav>
     </header>
