--- a/templates/weather/index.html
+++ b/templates/weather/index.html
@@ -90,13 +90,13 @@
 </head>
 <body>
     <header>
-        <nav>
-            <a href="/">Прогноз погоды</a>
-            <a href="/statistics/">Статистика</a>
-            <a href="/upload/">Загрузить свои данные</a>
-            <a href="#">Профиль</a>
-        </nav>
-    </header>
+    <nav>
+        <a href="/">Прогноз погоды</a>
+        <a href="/statistics/">Статистика</a>
+        <a href="/upload/">Загрузить свои данные</a>
+        <a href="/logout/">Выйти</a>
+    </nav>
+</header>
 
     <div class="weather-container">
         <h1 class="weather-title">Прогноз погоды на неделю</h1>
