--- a/templates/weather/statistics.html
+++ b/templates/weather/statistics.html
@@ -33,14 +33,14 @@
     </style>
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="/">Прогноз погоды</a>
-            <a href="/statistics/">Статистика</a>
-            <a href="/upload/">Загрузить свои данные</a>
-            <a href="#">Профиль</a>
-        </nav>
-    </header>
+    <<header>
+    <nav>
+        <a href="/">Прогноз погоды</a>
+        <a href="/statistics/">Статистика</a>
+        <a href="/upload/">Загрузить свои данные</a>
+        <a href="/logout/">Выйти</a>
+    </nav>
+</header>
 
     <div class="container mt-4">
 <h1>Статистика погоды</h1>
