--- a/templates/weather/upload.html
+++ b/templates/weather/upload.html
@@ -219,13 +219,13 @@
 <body style="width: 100%;
             height: 100%;">
     <header>
-        <nav>
-            <a href="/">Прогноз погоды</a>
-            <a href="/statistics/">Статистика</a>
-            <a href="/upload/">Загрузить свои данные</a>
-            <a href="#">Профиль</a>
-        </nav>
-    </header>
+    <nav>
+        <a href="/">Прогноз погоды</a>
+        <a href="/statistics/">Статистика</a>
+        <a href="/upload/">Загрузить свои данные</a>
+        <a href="/logout/">Выйти</a>
+    </nav>
+</header>
     <div class="main">
     <div class="upload-container">
         <div class="upload-header">
