--- a/templates/weather/statistics.html
+++ b/templates/weather/statistics.html
@@ -33,7 +33,7 @@
     </style>
 </head>
 <body>
-    <<header>
+    <header>
     <nav>
         <a href="/">Прогноз погоды</a>
         <a href="/statistics/">Статистика</a>
